[gd_scene load_steps=8 format=3 uid="uid://elnaeh40f0rl"]

[ext_resource type="Script" path="res://scripts/SeedInventorySlot.gd" id="1_cqu5i"]
[ext_resource type="Texture2D" uid="uid://m6u31k66tnvb" path="res://Assets/Sprites/UISprites/SeedUIInventorySlot.png" id="2_gxpgo"]
[ext_resource type="Texture2D" uid="uid://caqdd3t2eaqg" path="res://Assets/Sprites/UISprites/SeedUIInventorySlot-2.png" id="2_uyumv"]
[ext_resource type="Texture2D" uid="uid://caw1gsousvoxp" path="res://Assets/Sprites/SeedSprites/Seed1Shape.png" id="3_6s8cb"]
[ext_resource type="Texture2D" uid="uid://dct0l070ari3s" path="res://Assets/Sprites/SeedSprites/Seed1Colour1.png" id="4_7c44o"]
[ext_resource type="Texture2D" uid="uid://boy6bjols7qar" path="res://Assets/Sprites/SeedSprites/Seed1Colour2.png" id="5_c22xy"]
[ext_resource type="PackedScene" uid="uid://bwpivssvcjqni" path="res://Scenes/seed_tooltip.tscn" id="7_k6g3u"]

[node name="TextureButton" type="TextureButton"]
offset_right = 32.0
offset_bottom = 32.0
texture_normal = ExtResource("2_gxpgo")
texture_pressed = ExtResource("2_uyumv")
texture_hover = ExtResource("2_uyumv")
script = ExtResource("1_cqu5i")

[node name="SeedShape" type="Sprite2D" parent="."]
modulate = Color(0.541267, 0.402963, 0.996586, 1)
position = Vector2(15, -6)
scale = Vector2(2, 2)
texture = ExtResource("3_6s8cb")

[node name="SeedColour1" type="Sprite2D" parent="."]
modulate = Color(0.866667, 0.25098, 0.25098, 1)
position = Vector2(15, -6)
scale = Vector2(2, 2)
texture = ExtResource("4_7c44o")

[node name="SeedColour2" type="Sprite2D" parent="."]
modulate = Color(0, 0.482602, 0.482721, 1)
position = Vector2(15, -6)
scale = Vector2(2, 2)
texture = ExtResource("5_c22xy")

[node name="SeedTooltip" parent="." instance=ExtResource("7_k6g3u")]
visible = false
z_index = 2
layout_mode = 1
offset_left = 34.0
offset_top = 1.0
offset_right = 34.0
offset_bottom = 1.0

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="pressed" from="." to="." method="_on_pressed"]
